# LMBench

./: .gitignore  README.md  install.ps1  install.sh  pyproject.toml  test_stream.py
scripts/: release.py
src/lmbench/: cli.py
src/lmbench/backends/: base.py  discovery.py  launcher.py  lmstudio.py  ollama.py
src/lmbench/core/: ai_recommender.py  config.py  engine.py  esxi.py  recommender.py  registry.py  reporter.py  updater.py
src/lmbench/system/: health.py  probe.py  storage.py
