[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lmbench"
version = "3.4.0"
description = "Universal Benchmark for Local Large Language Models"
readme = "README.md"
authors = [
  { name = "LMBench Team", email = "bench@example.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "psutil>=5.9.0",
    "platformdirs>=4.0.0",
    "py-cpuinfo>=9.0.0",
    "nvidia-ml-py>=12.535.0",
]

[project.scripts]
lmbench = "lmbench.cli:app"

[project.urls]
"Homepage" = "https://github.com/yourusername/lmbench"
"Bug Tracker" = "https://github.com/yourusername/lmbench/issues"

[tool.setuptools.packages.find]
where = ["src"]
